--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -13,7 +13,7 @@
     
     <!-- Meta Tags -->
     {% if settings.meta_tags %}
-      {% for meta_code in settings.meta_tags %}
+      {% for meta_code in meta_tags %}
         {{meta_code}}
       {% endfor %}
     {% endif %}
