Removed Meta Loop (Need later Rework)

--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -11,14 +11,14 @@
       <meta name="description" content="{{description}}"/>
     {% endif %}
     
-    <!-- Meta Tags -->
+    <!-- Meta Tags
     {% if settings.meta_tags %}
       {% for meta_code in meta_tags %}
         {{meta_code}}
       {% endfor %}
     {% endif %}
     
-    {% block head %}{% endblock %}
+    {% block head %}{% endblock %} -->
     
     <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
     
